syntax = "proto3";

package parser;
option go_package = "ps/parser";
service ParserService {
  rpc ParseTable (ParseRequest) returns (ParseResponse);
}

message ParseRequest {
  string file_path = 1;
}

message ParseResponse {
  repeated TableRow rows = 1;
  repeated Content contents = 2;
}

message TableRow {
  repeated string cells = 1;
}

message Content {
  string text = 1;
}
